# simple-logs-to-discord

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.example.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: __init__.py  config.py  main.py  matcher.py  notifier.py  watcher.py
tests/: test_config.py  test_matcher.py  test_notifier.py
